dns_tester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-lookup
spec:
  containers:
  - name: dns-lookup
    image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
    args: [/bin/sh, -c,
            'i=0; while true; do echo "$i: $(dig +short www.google.co.uk)"; i=$((i+1)); sleep 10; done']
